Version 1.1.4 (released ??-???-????)

  * fix standalone.py failure (when per-root options aren't used)(issue #445)

Version 1.1.3 (released 22-Dec-2009)

  * security fix: add root listing support of per-root authz config
  * security fix: query.py requires 'forbidden' authorizer (or none) in config
  * fix URL-ification of truncated log messages (issue #3)
  * fix regexp input validation (issue #426, #427, #440)
  * add support for configurable tab-to-spaces conversion
  * fix not-a-sequence error in diff view
  * allow viewvc-install to work when templates-contrib is absent
  * minor template improvements/corrections
  * expose revision metadata in diff view (issue #431)
  * markup file/directory item property URLs and email addresses (issue #434)
  * make ViewVC cross copies in Subversion history by default
  * fix bug that caused standalone.py failure under Python 1.5.2 (issue #442)
  * fix support for per-vhost overrides of authorizer parameters (issue #411)
  * fix root name identification in query.py interface

Version 1.1.2 (released 11-Aug-2009)

  * security fix: validate the 'view' parameter to avoid XSS attack
  * security fix: avoid printing illegal parameter names and values
  * add optional support for character encoding detection (issue #400)
  * fix username case handling in svnauthz module (issue #419)
  * fix cvsdbadmin/svnadmin rebuild error on missing repos (issue #420)
  * don't drop leading blank lines from colorized file contents (issue #422)
  * add file.ezt template logic for optionally hiding binary file contents

Version 1.1.1 (released 03-Jun-2009)

  * fix broken query form (missing required template variables) (issue #416)
  * fix bug in cvsdb which caused rebuild operations to lose data (issue #417)
  * fix cvsdb purge/rebuild repos lookup to error on missing repos
  * fix misleading file contents view page title

Version 1.1.0 (released 13-May-2009)

  * add support for full content diffs (issue #153)